<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activites.CreerCompteActivity">

    <LinearLayout
        android:id="@+id/llPourLogo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7.5"
        android:background="#000000"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtShopCreerCompte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/shop"
            android:textAlignment="textEnd"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivLogoInscription"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.2"
            android:contentDescription="@string/logoshopsell"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/txtSellCreerCompte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/sell"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFormulaireInscription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtInscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="90dp"
            android:text="@string/inscription"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textColorHint="#546E7A"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/edtNomFamilleUtilisateur"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:autofillHints="givenName"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/nom"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColorHint="#546E7A" />

        <EditText
            android:id="@+id/edtPrenomUtilisateur"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:autofillHints="familyName"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/prenom"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColorHint="#546E7A" />

        <EditText
            android:id="@+id/edtEmailUtilisateur"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColorHint="#546E7A" />

        <EditText
            android:id="@+id/edtTelUtilisateur"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:autofillHints="phone"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/numero_de_telephone"
            android:inputType="phone"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColorHint="#546E7A" />

        <EditText
            android:id="@+id/edtMDP1Utilisateur"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:autofillHints="password"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/mot_de_passe"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColorHint="#546E7A" />

        <EditText
            android:id="@+id/edtMDP2Utilisateur"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:autofillHints="password"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/confirmer_mot_de_passe"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColorHint="#546E7A" />

        <Button
            android:id="@+id/btnSinscrire"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:backgroundTint="#000000"
            android:text="@string/s_inscrire"
            app:cornerRadius="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPourNavigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:background="#000000"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnAccueilSinscrire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/btnaccueil"
            android:scaleType="fitCenter"
            android:src="@drawable/home" />

        <ImageButton
            android:id="@+id/btnAjouterSinscrire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/btnajouter"
            android:scaleType="fitCenter"
            android:src="@drawable/add" />

        <ImageButton
            android:id="@+id/btnUtilisateurSinscrire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/btnutilisateur"
            android:scaleType="fitCenter"
            android:src="@drawable/user_clicked" />
    </LinearLayout>

</LinearLayout>