<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activites.ConnexionUtilisateurActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7.5"
        android:background="#000000"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/shop"
            android:textAlignment="textEnd"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.2"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/sell"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="Connexion"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="40dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtEmailConnexion"
            android:layout_width="307dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="E-mail"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edtMotDePasseConnexion"
            android:layout_width="307dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/mot_de_passe"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/btnConnexion"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:backgroundTint="#000000"
            android:gravity="center"
            android:text="@string/se_connecter"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/btnCreerCompte"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#000000"
            android:text="@string/creer_un_compte"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

        <TextView
            android:id="@+id/mdp_oublie"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:text="Mot de passe oublié ?"
            android:textAlignment="center"
            android:textColor="#2196F3"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/aide"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:text="@string/aide"
            android:textAlignment="center"
            android:textColor="#2196F3"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:text="@string/a_propos"
            android:textAlignment="center"
            android:textColor="#2196F3"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/contacter_nous"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:text="@string/contactez_nous"
            android:textAlignment="center"
            android:textColor="#2196F3"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:background="#000000"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_accueil_connexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="Bouton d'accueil"
            android:scaleType="fitCenter"
            android:src="@drawable/home" />

        <ImageButton
            android:id="@+id/btn_ajouter_connexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="Bouton Ajouter Produit"
            android:scaleType="fitCenter"
            android:src="@drawable/add" />

        <ImageButton
            android:id="@+id/btn_utilisateur_connexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="Bouton Profil Utilisateur"
            android:scaleType="fitCenter"
            android:src="@drawable/user_clicked" />
    </LinearLayout>

</LinearLayout>